[package]
name = "glab-cli"
version = "0.1.0"
authors = ["kingslayer"]
edition = "2018"

[dependencies]
app_dirs = "1.2.1"
console = "0.12.0"
clap = "2.33.3"
crossbeam-channel = "0.5.0"
failure = "0.1.8"
rust-ini = "0.16.0"
dirs = "3.0.1"
lazy_static = "1.4.0"
signal-hook = "0.1.16"
parking_lot = "0.11.0"
